fix(home): standardize UI z-index scheme
- add global strata variables
- remove z-index from elements that do not need it
- replace z-index values with strata variables

--- a/src/components/Molecules/Hero/Hero.css
+++ b/src/components/Molecules/Hero/Hero.css
@@ -6,37 +6,35 @@
 @value small as bp-small, medium as bp-medium, header as bp-header from "../../00_global/breakpoints.css";
 
 .hero {
+  position: relative;
+  overflow: hidden;
   background: black;
   border-bottom: 1px solid gray;
-  color: #ddd;
-  overflow: hidden;
   margin-bottom: 1.5rem;
-  position: relative;
+  color: #ddd;
   text-align: center;
   text-shadow: 1px 0px 20px gray;
 }
 
 .figure {
-  height: 100%;
-  left: 0;
-  margin: 0;
-  opacity: 0.8;
   position: absolute;
   top: 0;
+  left: 0;
   width: 100%;
-  z-index: 0;
+  height: 100%;
+  margin: 0;
+  opacity: 0.8;
 }
 
 .figure::after {
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, black 100%);
   content: '';
-  height: 100%;
-  left: 0;
   position: absolute;
   top: 0;
+  left: 0;
   width: 100%;
+  height: 100%;
   opacity: 0.5;
-  z-index: 1;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, black 100%);
   box-shadow: inset 0px 15px 100px 0px black;
 }
 
@@ -47,14 +45,13 @@
 }
 
 .text {
-  font-size: 1rem;
+  position: relative;
+  width: 93%;
   max-width: 800px;
   margin: 0 auto;
   padding: 175px 15px 30px;
-  position: relative;
+  font-size: 1rem;
   text-shadow: 0 1px 0 #000;
-  width: 93%;
-  z-index: 2;
 }
 
 @media bp-small {
