--- a/src/components/Organisms/Main/Main.css
+++ b/src/components/Organisms/Main/Main.css
@@ -5,20 +5,6 @@
 /* import breakpoints */
 @value header as bp-header, medium as bp-medium, maxWidth as bp-maxWidth from "../../00_global/breakpoints.css";
 
-.drawerBg {
-  background: rgba(0, 0, 0, 0.5);
-  bottom: 0;
-  top: 0;
-  left: 0;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  z-index: 4000;
-  opacity: 0.001;
-  transform: translateZ(0);
-  visibility: hidden;
-}
-
 /* Main Content */
 .mainContainer {
   margin: 1rem 1rem 2rem;
